@@ -1,5 +1,6 @@
 1.6
 
+Added: @Parameters(commandDescription = "command description")
 Added: now throwing an exception if required main parameters are not supplied
 Fixed: usage() was changing default values after two runs (jstrachan)
 
